--- a/config/local-conf.yaml
+++ b/config/local-conf.yaml
@@ -2,3 +2,10 @@ Server:
   Port: ":8080"
   ReadTimeout: 4
   WriteTimeout: 4
+  Mode: Development
+Logger:
+  Development: true
+  DisableCaller: false
+  DisableStacktrace: false
+  Encoding: json
+  Level: info  
